--- a/app/src/main/res/layout/item_tourney.xml
+++ b/app/src/main/res/layout/item_tourney.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
-    android:background="@drawable/shape_background_item"
-    android:padding="3dp">
+    android:background="@drawable/shape_background_item">
 
     <ImageView
         android:id="@+id/imageViewTournamentEnemy1"
