--- a/app/src/main/res/layout/item_tourney.xml
+++ b/app/src/main/res/layout/item_tourney.xml
@@ -5,14 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp"
+    android:padding="3dp"
     android:background="@drawable/shape_background_item">
 
     <ImageView
         android:id="@+id/imageViewTournamentEnemy1"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_hockey" />
@@ -21,8 +23,8 @@
         android:id="@+id/imageViewTournamentEnemy2"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="3dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_hockey" />
@@ -71,9 +73,9 @@
         android:id="@+id/textViewTournamentDate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="3dp"
-        android:layout_marginEnd="3dp"
+        android:layout_marginEnd="5dp"
         android:gravity="center_horizontal"
         android:text="31 декабря 2021, пятница. 22:00 МСК"
         android:textColor="@color/lightWhite"
@@ -86,7 +88,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:gravity="center_horizontal"
         android:text="Группа A"
@@ -99,7 +101,7 @@
         android:id="@+id/textViewTournamentEnemy1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="5dp"
@@ -117,7 +119,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="3dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         android:gravity="center_horizontal"
         android:text="Швейцария U20"
