--- a/app/src/main/res/layout/fragment_matches.xml
+++ b/app/src/main/res/layout/fragment_matches.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/full_transparent"
-    tools:context=".presentation.ui.teams.TeamsFragment">
+    tools:context=".presentation.ui.teams.MatchesFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_team"
-        android:id="@+id/rvTeams"
+        android:id="@+id/rvMatches"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
